--- a/style.CSS
+++ b/style.CSS
@@ -16,15 +16,15 @@ body {
 }
 /* Cores para cada seção */
 #section1 {
- background-color: #e3f2fd; /* Azul claro */
+ background-color: #3389c6; /* Azul claro */
  color: #0d47a1; /* Azul escuro */
 }
 #section2 {
- background-color: #fce4ec; /* Rosa claro */
+ background-color: #e46a93; /* Rosa claro */
  color: #880e4f; /* Rosa escuro */
 }
 #section3 {
- background-color: #e8f5e9; /* Verde claro */
+ background-color: #97e79d; /* Verde claro */
 color: #1b5e20; /* Verde escuro */
 }
 /* Estilo dos títulos */
